2002-02-14  Dietmar Maurer  <dietmar@ximian.com>

	* socket-io.c (convert_sockopt_level_and_name): ifdef
	SO_ACCEPTCONN because it is not defined on my system (old debian)

Thu Feb 14 11:49:30 CET 2002 Paolo Molaro <lupus@ximian.com>

	* opcode.c: use stddef.h to get NULL.

2002-02-14  Jeffrey Stedfast  <fejj@ximian.com>

	* socket-io.c: conditionally include sys/filio.h and sys/sockio.h
	for FIONBIO, FIONREAD and SIOCATMARK.
	(ves_icall_System_Net_Dns_GetHostByAddr_internal): SunOS doesn't
	define INADDR_NONE and besides, inet_addr() is deprecated and
	should not be used. Use inet_pton() instead - it also has the
	added bonus that it can easily handle IPv6 addresses as well.
	(inet_pton): Implement using inet_aton() ifndef HAVE_INET_PTON.

Wed Feb 13 23:00:21 CET 2002 Paolo Molaro <lupus@ximian.com>

	* decimal.c: remove _MSC_VER conditional.

2002-02-13  Dick Porter  <dick@ximian.com>

	* socket-io.c: 
	* icall.c: Internal calls for Blocking, Select, Shutdown,
	GetSocketOption and SetSocketOption

Wed Feb 13 19:20:01 CET 2002 Paolo Molaro <lupus@ximian.com>

	* assembly.cs: better resolver: use it instead of some kludgy
	code.

Wed Feb 13 18:25:55 CET 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c: the best way to speed-up the compiler is to avoid
	infinite loops.

2002-02-13  Dietmar Maurer  <dietmar@ximian.com>

	* class.c (mono_class_vtable): changed the object layout
	(obj->vtable->class). 
	(mono_class_create_from_typespec): consider MONO_TYPE_PTR

Tue Feb 12 20:06:01 CET 2002 Paolo Molaro <lupus@ximian.com>

	* assembly.c: look for assemblies in the assembly dir, too.

Tue Feb 12 14:03:42 CET 2002 Paolo Molaro <lupus@ximian.com>

	* class.c: fix thinko in mono_class_from_type().

Mon Feb 11 19:43:51 CET 2002 Paolo Molaro <lupus@ximian.com>

	* exception.h, exception.c: added TypeLoadException.
	* object.h, object.c: added mono_array_clone ().
	* icall.c: handle throwOnError in AssemblyGetType().
	Added Array.Clone().