@@ -119,6 +119,7 @@ MonoClass** mono_metadata_interfaces_from_typedef (MonoImage *meta, guint32 inde
 
 guint32     mono_metadata_properties_from_typedef (MonoImage *meta, guint32 index, guint *end);
 guint32     mono_metadata_methods_from_property   (MonoImage *meta, guint32 index, guint *end);
+guint32     mono_metadata_packing_from_typedef    (MonoImage *meta, guint32 index, guint32 *packing, guint32 *size);
 
 void        mono_metadata_field_info (MonoImage *meta, 
 				      guint32       index,
